@@ -44,7 +44,7 @@
                 "iconUrl": "https://raw.githubusercontent.com/tonesto7/echo-speaks/master/resources/icons/es_groups.png",
                 "published": true,
                 "oAuth": false,
-                "version": "3.2.0.3",
+                "version": "3.2.0.4",
                 "appSettings": {},
                 "appUrl": "smartapps/tonesto7/echo-speaks-zones.src/echo-speaks-zones.groovy",
                 "optional": false
