@@ -8,7 +8,7 @@
             "ver": "3.2.0.3"
         },
         "zoneApp": {
-            "ver": "3.2.0.3"
+            "ver": "3.2.0.4"
         },
         "echoDevice": {
             "ver": "3.2.0.2"
